Minor edits to grading scheme

--- a/Project 07 Evolutionary algorithms and the TSP.ipynb
+++ b/Project 07 Evolutionary algorithms and the TSP.ipynb
@@ -691,39 +691,39 @@
     "Your work will be graded as follows: (100 total points)\n",
     "\n",
     "- Problem 1\n",
-    "    - Get information from the Excel file (4 pts)\n",
-    "    - Print list of cities (1 pt)\n",
+    "    - Get information from the Excel file (4 points)\n",
+    "    - Print list of cities (1 point)\n",
     "- Problem 2\n",
-    "    - Add code to plot the stadiums with red dots (3 pts)\n",
+    "    - Add code to plot the stadiums with red dots (3 points)\n",
     "- Problem 3\n",
-    "    - Write docstring (1 pts)\n",
-    "    - Convert angles (2 pts)\n",
-    "    - Compute distance in meters (2 pts)\n",
-    "    - Convert to miles and return (2 pts)\n",
+    "    - Write docstring (1 points)\n",
+    "    - Convert angles (2 points)\n",
+    "    - Compute distance in meters (2 points)\n",
+    "    - Convert to miles and return (2 points)\n",
     "- Problem 4\n",
-    "    - Set value of `numparks` (1 pt)\n",
-    "    - Make `distances` matrix (3 pts)\n",
-    "    - Ensure diagonals of `distances` are zero (1 pt)\n",
-    "    - Check (1,3) entry of `distances` (1 pt)\n",
+    "    - Set value of `numparks` (1 point)\n",
+    "    - Make `distances` matrix (3 points)\n",
+    "    - Ensure diagonals of `distances` are zero (1 point)\n",
+    "    - Check (1,3) entry of `distances` (1 point)\n",
     "- Problem 5\n",
-    "    - Correctly define `circuitlength` (6 pts)\n",
-    "    - Write docstring (1 pt)\n",
-    "    - Define test permutation (2 pts)\n",
-    "    - Call `circuitlength` on test permutation and print (2 pts)\n",
+    "    - Correctly define `circuitlength` (6 points)\n",
+    "    - Write docstring (1 point)\n",
+    "    - Define test permutation (2 points)\n",
+    "    - Call `circuitlength` on test permutation and print (2 points)\n",
     "- Problem 6\n",
-    "    - Print last parent (1 pt)\n",
+    "    - Print last parent (1 point)\n",
     "- Problem 7\n",
-    "    - Correctly define `next_elt` function (4 pts)\n",
-    "    - Write docstring (1 pt)\n",
-    "    - Print 2 correct tests (2 pts)\n",
+    "    - Correctly define `next_elt` function (4 points)\n",
+    "    - Write docstring (1 point)\n",
+    "    - Print 2 correct tests (2 points)\n",
     "- Problem 8\n",
-    "    - Correctly define `previous_elt` function (4 pts)\n",
-    "    - Write docstring (1pt)\n",
-    "    - Print 2 correct tests (2 pts)\n",
+    "    - Correctly define `previous_elt` function (4 points)\n",
+    "    - Write docstring (1 point)\n",
+    "    - Print 2 correct tests (2 points)\n",
     "- Problem 9\n",
-    "    - Write docstring (1 pts)\n",
+    "    - Write docstring (1 points)\n",
     "- Problem 10\n",
-    "    - Set value of `num_gens` (1 pt)\n",
+    "    - Set value of `num_gens` (1 point)\n",
     "- Problem 11\n",
     "    - (03) While loop with correct termination condition (2 points)\n",
     "    - (05) For loop correctly iterates over every parent permutation $S_i$ (2 points)\n",
@@ -741,14 +741,14 @@
     "    - (20) Correctly replace parent with child (3 points)\n",
     "    - `num_passes` updated correctly (1 point)\n",
     "- Problem 12\n",
-    "    - Identify fittest parent (3 pts)\n",
-    "    - Print circuit (2 pts)\n",
-    "    - Print length (2 pts)\n",
+    "    - Identify fittest parent (3 points)\n",
+    "    - Print circuit (2 points)\n",
+    "    - Print length (2 points)\n",
     "- Problem 13\n",
-    "    - Print list of stadium names in correct order (3 pts)\n",
-    "    - List of stadium names returns to starting stadium (2 pts)\n",
+    "    - Print list of stadium names in correct order (3 points)\n",
+    "    - List of stadium names returns to starting stadium (2 points)\n",
     "- Problem 14\n",
-    "    - Plot the circuit with black lines (4 pts)\n",
+    "    - Plot the circuit with black lines (4 points)\n",
     "- All problems: helpful comments throughout your code (5 points)  "
    ]
   }
